--- a/ssd_js_course/lessons/l5_variables/l5-variables.html
+++ b/ssd_js_course/lessons/l5_variables/l5-variables.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>HTML CSS Review</title>
-    <style>
-      .red-button {
-        background-color: red;
-        color: white;
-        border: none;
-      }
-
-      .yellow-button {
-        background-color: yellow;
-      }
-    </style>
+    <title>Variables</title>
   </head>
-
   <body>
-    <button
-      title="Good Job!" class="red-button"
-      onclick="
-        alert('Good job!');
-      ">
-      hello
-    </button>
-
-    <p>paragraph of <button class="yellow-button">hello</button> text</p>
-
     <script>
-      // alert("hello");
+      let variable1 = 3;
+      console.log(variable1);
 
-      console.log("hello");
+      let calculation = 2 + 2;
+      console.log(calculation);
+      console.log(calculation + 2);
+
+      let result = calculation + 2;
+      console.log(result);
+
+      let message = `hello`;
+      console.log(message); console.log(';');
+
+      variable1 = 5;
+      console.log(variable1);
+
+      variable1 = variable1 + 1;
+      console.log(variable1);
+
+      // 2nd way to make vars
+      const variable2 = 3;
+      var variable3 = 3;
+
+      console.log(typeof variable2);
+      console.log(typeof message);
+
+      // Best practice: use const by default 
+      // and only use let when you need to reassign the variable
+
     </script>
-
-
   </body>
 </html>
