--- a/ssd_js_course/lessons/l6_bools/l6_exercises/6a.html
+++ b/ssd_js_course/lessons/l6_bools/l6_exercises/6a.html
@@ -1,5 +1,42 @@
 <!-- Lesson 6 Exercises - Booleans and If-Statements
 6a. Create a variable called `hour` and save the current hour of the day
 (use 24-hour format and save it as a number ) 
+ - If hour is between 6 and 12, display "Good morning!" in the console
+ - If hour is between 13 and 17, display "Good afternoon!" in the console 
+ - Otherwise, display "Good evening!" in the console
 
 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ex 6a</title>
+</head>
+<body>
+  <h1>Exercise 6a</h1>
+  <!-- Bulleted list -->
+  <p>
+    Create a variable called `hour` and save the current hour of the day 
+    (use 24-hour format and save it as a number ) 
+    <ul>
+      <li>If hour is between 6 and 12, display "Good morning!" in the console</li>
+      <li>If hour is between 13 and 17, display "Good afternoon!" in the console </li>
+      <li>Otherwise, display "Good evening!" in the console</li>
+    </ul>
+  </p>
+
+  <script>
+    const hour = new Date().getHours();
+    if (hour >= 6 && hour <= 12) {
+      console.log('Good morning!');
+    } else if (hour >= 13 && hour <= 17) {
+      console.log('Good afternoon!');
+    } else {
+      console.log('Good evening!');
+    }
+  </script>
+
+  
+</body>
+</html>
