--- a/ssd_js_course/lessons/l7_functions/l7-functions.html
+++ b/ssd_js_course/lessons/l7_functions/l7-functions.html
@@ -13,8 +13,15 @@
       console.log(2 + 2);
     }
 
-    function1();
-    function1();
+    // function1();
+    // function1();
+
+    function calculateTax(cost, taxPercent = 0.1) {
+      console.log(cost * taxPercent);
+    }
+
+    calculateTax(2000, 0.2);
+    calculateTax(5000, );
 
   </script>
   
